--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -574,6 +574,9 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "شما @1% را حذف کردید";
 
+/* Indicates how many members are in the group */
+"group.feed.n.members" = "group.feed.n.members";
+
 /* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.body" = "این لینک را با دوستانتان به اشتراک بگذارید و آن‌ها اتوماتیک به گروه شما میپیوندند.";
 
@@ -822,6 +825,9 @@
 
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ پست حذف شدند";
+
+/* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
+"new.group.members.empty.placeholder" = "مخاطبین شما که در هالواپ هستند اینجا ظاهر میشوند";
 
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "حداکثر اعضای گروه d%";
