--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -52,6 +52,9 @@
 /* Translation of iPhone settings app. */
 "app.ios.settings" = "Ayarlar";
 
+/* Company name */
+"app.name.halloapp" = "HalloApp";
+
 /* Placeholder text for when the archive is empty */
 "archive.empty.placeholder" = "Arşivlenmiş gönderilerin burada görünecek";
 
@@ -90,6 +93,9 @@
 
 /* Title for Install button, takes the user to the HalloApp app store view where they can download the app. */
 "button.install" = "Yükle";
+
+/* Title for generic Invite button. */
+"button.invite" = "Davet et";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "Daha fazlasını öğren";
@@ -364,6 +370,9 @@
 /* Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Kişiler nasıl açılır";
 
+/* The default name given to new groups when the user is in Zero Zone (no contacts) */
+"create.group.default.name.my.new.group" = "Yeni grubum";
+
 /* Text label for group description text box */
 "create.group.description.label" = "Grup açıklaması";
 
@@ -439,6 +448,9 @@
 /* Text for feed notification displayed in Activity Center. */
 "feed.notification.replied.w.text" = "<$author$>, cevap verdi: <$text$>";
 
+/* Archived date timestamp */
+"feed.post.archived.timestamp" = "arşivlendi";
+
 /* Shown when post fails or is canceled. */
 "feed.post.failed" = "Paylaşılamadı.";
 
@@ -480,6 +492,12 @@
 
 /* Possible Feed Privacy setting value. Keep short. */
 "feed.privacy.value.n.selected" = "feed.privacy.value.n.selected";
+
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body" = "Reklam, marka, beğeni ve etkileyicilerin olmadığı bir alanda ailen ve arkadaşlarınla bağlantı kurmak için telefon numaranı kullan. \n\nHalloApp yalnızca sen ve en yakınların için. Başlamak için arkadaşlarını davet et!";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title" = "Gerçek bağların alanı HalloApp'e hoş geldin ✨\n ";
 
 /* Button under someone's post. Verb. */
 "feedpost.button.comment" = "Yorum yap";
@@ -556,6 +574,15 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "%1@ kişisini sildin";
 
+/* Indicates how many members are in the group */
+"group.feed.n.members" = "grup.yayını.ve.üyeler";
+
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
+"group.feed.welcome.post.body" = "Gruba katılmaları için bu ilişimi arkadaşlarınla paylaş.";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
+"group.feed.welcome.post.title" = "Grubuna arkadaşını davet et";
+
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "İlişim yoluyla Gruba davet et";
 
@@ -622,6 +649,9 @@
 /* Text shown when user is about to remove the group */
 "groups.list.remove.message" = "Bu grubu ve içeriğini telefonundan silmek istediğine emin misin?";
 
+/* The name of the group that is created for the user when they are new and in the zero zone (no contacts and no content) */
+"groups.NUX.user.group.name" = "%@ kişisinin grubu";
+
 /* A label on the header to indicate which person I have groups in common with */
 "groups.title" = "%@ ile";
 
@@ -636,6 +666,9 @@
 
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Bu sürüm güncel değil";
+
+/* Title of action sheet that allows the user to choose between sms and whatsapp to invite contact */
+"invite.action.sheet.title" = "%@ kişisini ... yoluyla davet et";
 
 /* Displayed below contact name in contact list that is displayed when inviting someone to HalloApp. */
 "invite.already.halloapp.user" = "Halihazırda HalloApp kullanıcısı";
@@ -669,6 +702,9 @@
 
 /* Title for the screen that allows to select contact to invite. */
 "invite.title" = "Davet et";
+
+/* Title of cell at the top of the invite screen */
+"invite.via.link" = "İlişim yoluyla davet et";
 
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Ara";
@@ -789,6 +825,9 @@
 
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ gönderi silindi";
+
+/* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
+"new.group.members.empty.placeholder" = "HalloApp'teki kişilerin burada görünecek";
 
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "En fazla %d kişi olabilir";
@@ -1251,6 +1290,9 @@
 
 /* Fourth tab in the main app interface */
 "title.settings" = "Ayarlar";
+
+/* Row in Settings screen */
+"title.storage" = "Depolama";
 
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "... tarafından görüldü ";
