--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -922,9 +922,6 @@
 /* Message shown only limited access to media. */
 "picker.access.limited.message" = "Je hebt HalloApp toegang gegeven tot een beperkt aantal foto's en video's.";
 
-/* Initial picker screen title. The default source of picker photos */
-"picker.default.title" = "Filmrol";
-
 /* Alert message in media picker when unable to load media file. */
 "picker.media.fail.message" = "Probeer opnieuw of selecteer een andere foto of video alsjeblieft.";
 
@@ -945,6 +942,9 @@
 
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "picker.media.n.limit";
+
+/* Title for the picker screen. */
+"post.controller.picker.title" = "Nieuwe Post";
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Deze post is verwijderd";
@@ -1095,6 +1095,12 @@
 
 /* Message to show when safety number is succesfully verified */
 "safety.number.verified" = "Veiligheidsnummer voor %@ succesvol geverifieerd!";
+
+/* body of the marketing alert sent to users */
+"server.marketing.body" = "Nodig je vrienden uit voor HalloApp!";
+
+/* title of the marketing alert sent to users */
+"server.marketing.title" = "Hallo daar!";
 
 /* fallback text in notification for a new comment */
 "server.new.comment" = "Nieuwe Reactie";
@@ -1284,6 +1290,9 @@
 
 /* Title for the Comments screen. */
 "title.comments" = "Reacties";
+
+/* Title for the picker screen. */
+"title.comments.picker" = "Nieuwe Reactie";
 
 /* Second tab in the main app interface. */
 "title.groups" = "Groepen";
