--- a/HalloAppClip/pt.lproj/Localizable.strings
+++ b/HalloAppClip/pt.lproj/Localizable.strings
@@ -4,8 +4,17 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Por favor, confira se tem ligação à internet, e tente novamente.";
 
+/* Company name */
+"app.name.halloapp" = "HalloApp";
+
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Adicionar";
+
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "CANCELAR";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuar";
@@ -24,6 +33,9 @@
 
 /* Title for Install button, takes the user to the HalloApp app store view where they can download the app. */
 "button.install" = "Instalar";
+
+/* Title for generic Invite button. */
+"button.invite" = "Convidar";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "Saiba mais";
@@ -67,11 +79,17 @@
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Esta versão está desatualizada";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Buscar";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Saiba mais";
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Atualize a aplicação.";
+
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Carregando visualização ...";
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Eu";
@@ -112,6 +130,12 @@
 /* When user registers for HalloApp using the AppClip via group invite link, they are prompted to install HalloApp to join the group. */
 "registration.install.app.to.join.group" = "Instale o HalloApp para abrir %@";
 
+/* Title for popup that appears when user tries to register invalid number */
+"registration.invalidphone" = "Que pena!";
+
+/* Popup that appears when user tries to register invalid number */
+"registration.invalidphone.only" = "O número de telefone inserido é inválido. Por favor, cheque novamente.";
+
 /* Popup that appears when user tries to register uninvited number */
 "registration.invite.only" = "Se usou um link de convite de grupo para se registar, clique novamente no link para finalizar o registo e entrar no grupo.";
 
@@ -138,6 +162,9 @@
 
 /* Alert title telling the user that their account was successfully deleted */
 "settings.account.deleted.title" = "Conta apagada com sucesso";
+
+/* String to auto-fill if a user tried to share to a friend. */
+"settings.share.text" = "Junte-se à minha rede de relacionamento real no HalloApp. Baixe gratuitamente no site halloapp.com/dl";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Contato desconhecido";
