--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -346,6 +346,9 @@
 /* Feed Privacy indicator in post composer. */
 "composer.privacy.value.n.selected" = "composer.privacy.value.n.selected";
 
+/* Show the user that the title is tappable */
+"composer.subtitle.cta" = "Clique para mudar";
+
 /* No comment provided by engineer. */
 "CONNECTION" = "CONEXÃO";
 
@@ -460,14 +463,26 @@
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Compartilhar apenas com contatos selecionados";
 
+/* Header describing what these options are for */
+"feed.privacy.header" = "Quem verá minhas postagens";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.all" = "Meus contatos telefônicos";
 
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.except" = "Meus contatos, exceto...";
 
+/* Header for the list when selecting contacts to not share with. */
+"feed.privacy.list.except.details" = "Selecione quem não verá esta postagem";
+
+/* Title for the list when selecting contacts to not share with. */
+"feed.privacy.list.except.title" = "Ocultar postagens de ...";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.only" = "Compartilhar apenas com...";
+
+/* Header for the list when selecting contacts to share with. */
+"feed.privacy.list.only.details" = "Selecione quem verá esta postagem";
 
 /* Possible Feed Privacy setting value. */
 "feed.privacy.value.my.contacts" = "Meus contatos telefônicos";
@@ -565,6 +580,9 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "Você removeu %1@";
 
+/* Indicates how many members are in the group */
+"group.feed.n.members" = "grupo.feed.n.membros";
+
 /* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.body" = "Compartilhe este link com amigos, e eles se juntarão automaticamente ao seu grupo.";
 
@@ -645,6 +663,21 @@
 
 /* Text shown in the email body when sending logs from the help screen */
 "help.send.logs.email.body" = "Por favor, deixe um comentário ou uma descrição do problema no espaço acima.\n\nVersão %1$@ - %2$@\n%3$@";
+
+/* Button to dismiss the alert. */
+"home.calls.button.exit" = "OK";
+
+/* Text shown to users on call failure. */
+"home.calls.fail.text" = "Desculpe, por favor tente novamente mais tarde.";
+
+/* Title of failed call screen alert. */
+"home.calls.fail.title" = "Falha ao realizar a chamada.";
+
+/* Text shown to users trying to open the call screen. */
+"home.calls.notice.text" = "Você não tem nenhuma chamada ativa no momento.";
+
+/* Title of call screen alert. */
+"home.calls.notice.title" = "Nenhuma chamada ativa";
 
 /* Title for exit button that closes the app */
 "home.update.notice.button.exit" = "Sair";
@@ -814,6 +847,9 @@
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ publicações excluídas";
 
+/* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
+"new.group.members.empty.placeholder" = "Seus contatos que estão no HalloApp aparecerão aqui";
+
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "O tamanho máximo do grupo é %d";
 
@@ -913,6 +949,9 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "seletor.mídia.n.limite";
 
+/* Title for the picker screen. */
+"post.controller.picker.title" = "Nova Publicação";
+
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Esta publicação foi excluída";
 
@@ -921,6 +960,15 @@
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted.by.you" = "Você excluiu sua postagem";
+
+/* Header when selecting all or some contacts to share with */
+"post.privacy.header.contacts" = "Quem verá esta postagem";
+
+/* Header when selecting a group to share with */
+"post.privacy.header.groups" = "Compartilhar apenas com um grupo";
+
+/* Controller title for changing destination and privacy */
+"post.privacy.title" = "Compartilhar Com...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Bloqueado";
@@ -939,6 +987,9 @@
 
 /* Text for unblocking user under profile header */
 "profile.header.unblock.user" = "Desbloquear";
+
+/* Item in Profile > Calls screen. */
+"profile.help.calls" = "Chamadas";
 
 /* Item in Profile > Help screen. */
 "profile.help.faq" = "Perguntas frequentes";
@@ -1062,6 +1113,18 @@
 
 /* Message to show when safety number is succesfully verified */
 "safety.number.verified" = "Número de segurança verificado com sucesso para %@!";
+
+/* body of the marketing alert sent to users */
+"server.marketing.body" = "Convide seus amigos para desfrutar do HalloApp!";
+
+/* body of the marketing alert to encourage more posting */
+"server.marketing.post.body" = "O que você está fazendo agora pode ser interessante para seus amigos de verdade.";
+
+/* title of the marketing alert to encourage more posting */
+"server.marketing.post.title" = "Quer saber o que compartilhar?";
+
+/* title of the marketing alert sent to users */
+"server.marketing.title" = "Hallo ai!\n";
 
 /* fallback text in notification for a new comment */
 "server.new.comment" = "Novo comentário";
@@ -1251,6 +1314,9 @@
 
 /* Title for the Comments screen. */
 "title.comments" = "Comentários";
+
+/* Title for the picker screen. */
+"title.comments.picker" = "Novo comentário";
 
 /* Second tab in the main app interface. */
 "title.groups" = "Grupos";
